correction contraste

--- a/style.css
+++ b/style.css
@@ -785,7 +785,8 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #FFFFFF !important;
+    font-size: 20px;
 }
 
 .btn-atomic-tangerine:hover {
@@ -852,6 +853,16 @@ blockquote p {
 #bloc-4-portfolio h2 {
     padding-left: 28%;
     padding-right: 28%;
+}
+
+#bloc-8,
+#bloc-8 p {
+    font-size: 18px;
+}
+
+#bloc-8 a {
+    font-size: 14px;
+    color: #333333 !important;
 }
 
 @media (max-width: 1024px) {
